防止覆盖ui库使用的字体，ComboBox显示正确内容

--- a/demo/src/main/resources/com/icuxika/bittersweet/demo/css/bittersweet.css
+++ b/demo/src/main/resources/com/icuxika/bittersweet/demo/css/bittersweet.css
@@ -1,6 +1,6 @@
 @import "../fonts/Fonts.css";
 
-* {
-    -fx-font-family: "HarmonyOS Sans";
+.demo {
+    -fx-font-family: "HarmonyOS Sans SC";
     -fx-font-size: 1.5em;
 }
