--- a/demo/src/main/resources/com/icuxika/bittersweet/demo/css/bittersweet.css
+++ b/demo/src/main/resources/com/icuxika/bittersweet/demo/css/bittersweet.css
@@ -4,3 +4,13 @@
     -fx-font-family: "HarmonyOS Sans SC";
     -fx-font-size: 1.5em;
 }
+
+.mfx-text-field {
+    -fx-font-family: "HarmonyOS Sans SC";
+    -fx-font-size: 1.5em;
+}
+
+.mfx-combo-box-cell .data-label {
+    -fx-font-family: "HarmonyOS Sans SC";
+    -fx-font-size: 1.5em;
+}
