减弱Windows平台字体渲染锯齿

--- a/demo/src/main/resources/com/icuxika/bittersweet/demo/css/bittersweet.css
+++ b/demo/src/main/resources/com/icuxika/bittersweet/demo/css/bittersweet.css
@@ -1,16 +1,13 @@
 @import "../fonts/Fonts.css";
 
-.demo {
+.text {
     -fx-font-family: "HarmonyOS Sans SC";
-    -fx-font-size: 1.5em;
 }
 
 .mfx-text-field {
     -fx-font-family: "HarmonyOS Sans SC";
-    -fx-font-size: 1.5em;
 }
 
 .mfx-combo-box-cell .data-label {
     -fx-font-family: "HarmonyOS Sans SC";
-    -fx-font-size: 1.5em;
 }
