KButton支持css更换背景色

--- a/demo/src/main/resources/com/icuxika/bittersweet/demo/css/light/main-light.css
+++ b/demo/src/main/resources/com/icuxika/bittersweet/demo/css/light/main-light.css
@@ -4,3 +4,7 @@
     -fx-background-color: dodgerblue;
     -fx-text-fill: white;
 }
+
+.k-button-primary {
+    -k-button-background: dodgerblue;
+}
