KButton支持设置徽章

--- a/bittersweet/src/main/resources/com/icuxika/bittersweet/control/k-button.css
+++ b/bittersweet/src/main/resources/com/icuxika/bittersweet/control/k-button.css
@@ -6,3 +6,7 @@
     -fx-background-radius: 4px;
     -fx-background-insets: 0px;
 }
+
+.k-button .k-button-badge {
+    -fx-font-size: 12px !important;
+}
