--- a/demo/src/main/resources/com/icuxika/bittersweet/demo/css/dark/main-dark.css
+++ b/demo/src/main/resources/com/icuxika/bittersweet/demo/css/dark/main-dark.css
@@ -6,5 +6,6 @@
 }
 
 .k-button-primary {
-    -k-button-background: black;
+    -k-button-background: linear-gradient(from 0.0% 0.0% to 100.0% 0.0%, #193237ff 0.0%, #2e4e58ff 50.0%, #39687cff 100.0%);
+    -k-button-badge-background: #d03a52
 }
